# open-baby

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  pyproject.toml
nginx/: Dockerfile  cert.pem  key.pem  nginx.conf
scripts/: generate_self_signed_cert.sh
src/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  requirements-dev.txt  requirements.txt
src/backend/migrations/: env.py
src/backend/migrations/versions/: 2acdd28299a7_initial_migration.py  4d34c24e035e_fix_feed_amount_type.py  a08be7491865_add_pump_event.py  e149d8124e0c_add_diaper_events.py
src/backend/src/: main.py
src/backend/src/common/: service.py
src/backend/src/config/: __init__.py
src/backend/src/events/: __init__.py  model_schema_translation.py  models.py  persistence.py  router.py  schemas.py  service.py
src/backend/src/persistence/: database.py  dependencies.py
src/backend/src/stats/: persistence.py  router.py  schemas.py  service.py
src/frontend/: Dockerfile  README.md  nuxt.config.ts  package-lock.json  package.json
src/frontend/app/: app.vue
src/frontend/app/components/: BottomNav.vue  ColorModeButton.vue  ConfirmDialog.vue  EventBreastFeedEntryEdit.vue  EventButton.vue  EventDiaperEntryEdit.vue  EventEditDrawer.vue  EventFeedEntryEdit.vue  EventList.vue  EventPumpEntryEdit.vue
src/frontend/app/composables/: DateTime.ts  UnitConversion.ts  useEventForm.ts
src/frontend/app/pages/: history.vue  index.vue  stats.vue
src/frontend/repository/: factory.ts
src/frontend/types/: diaper.ts  event.ts  feed.ts
(+33 files in other folders)
