[project]
name = "open-baby"
version = "0.1.0"
description = "An open-source, no-frills baby logger designed by a parent for parents, putting you in complete control of your data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.3.0",
    "python-ulid[pydantic]>=3.1.0",
]
